--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "html-webpack-plugin": "^2.30.1",
         "http-proxy-middleware": "^0.17.3",
         "inject-loader": "^3.0.0",
+        "js-sha1": "^0.6.0",
         "karma": "^1.4.1",
         "karma-coverage": "^1.1.1",
         "karma-mocha": "^1.3.0",
