--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
+        "autoprefixer-loader": "^3.2.0",
         "babel-core": "^6.22.1",
         "babel-eslint": "^7.1.1",
         "babel-loader": "^7.1.1",
         "babel-plugin-istanbul": "^4.1.1",
         "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.3.2",
         "babel-preset-stage-2": "^6.22.0",
         "babel-register": "^6.22.0",
@@ -52,6 +54,7 @@
         "extract-text-webpack-plugin": "^3.0.0",
         "file-loader": "^1.1.4",
         "friendly-errors-webpack-plugin": "^1.6.1",
+        "generate-asset-webpack-plugin": "^0.3.0",
         "html-webpack-plugin": "^2.30.1",
         "http-proxy-middleware": "^0.17.3",
         "inject-loader": "^3.0.0",
@@ -72,6 +75,7 @@
         "ora": "^1.2.0",
         "phantomjs-prebuilt": "^2.1.14",
         "portfinder": "^1.0.13",
+        "postcss-loader": "^2.1.3",
         "rimraf": "^2.6.0",
         "selenium-server": "^3.0.1",
         "semver": "^5.3.0",
